<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D3ECF8">


        <TextView
            android:id="@+id/textHead2"
            android:layout_width="408dp"
            android:layout_height="68dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#FFEA00"


            android:text="@string/addShipping"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.104" />

        <TextView
            android:id="@+id/addform_text1"
            android:layout_width="120dp"
            android:layout_height="49dp"
            android:text="@string/Addform_text1"
            android:textColor="#3D5AFE"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.246" />

        <TextView
            android:id="@+id/addform_text2"
            android:layout_width="117dp"
            android:layout_height="45dp"
            android:text="@string/Addform_text2"
            android:textColor="#3D5AFE"
            android:textColorLink="#3D5AFE"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.057"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.344" />

        <TextView
            android:id="@+id/addform_text3"
            android:layout_width="149dp"
            android:layout_height="28dp"
            android:text="@string/Addform_text3"
            android:textColor="#3D5AFE"
            android:textColorLink="#3D5AFE"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.858"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.348" />

        <TextView
            android:id="@+id/addform_text4"
            android:layout_width="186dp"
            android:layout_height="40dp"
            android:text="@string/Addform_text4"
            android:textColor="#3D5AFE"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.513" />

        <TextView
            android:id="@+id/addform_text5"
            android:layout_width="128dp"
            android:layout_height="33dp"
            android:text="@string/Addform_text5"
            android:textColor="#3D5AFE"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/addform_text6"
            android:layout_width="148dp"
            android:layout_height="33dp"
            android:text="@string/Addform_text6"
            android:textColor="#3D5AFE"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.897"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6" />

        <TextView
            android:id="@+id/addform_text7"
            android:layout_width="131dp"
            android:layout_height="38dp"
            android:text="@string/Addform_text7"
            android:textColor="#3D5AFE"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.747" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="237dp"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#3D5AFE"
            android:textColorLink="#3D5AFE"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.919"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.246"
            tools:ignore="SpeakableTextPresentCheck" />


        <EditText
            android:id="@+id/editform2"
            android:layout_width="106dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="Code"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="#3D5AFE"
            android:textColorLink="#3D5AFE"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.418"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editform4"
            android:layout_width="161dp"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="Province"
            android:inputType="textPersonName"

            android:textColor="#3D5AFE"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.514"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editform6"
            android:layout_width="152dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="Zone"
            android:inputType="textPersonName"
            android:textColor="#3D5AFE"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.88"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.675"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editform5"
            android:layout_width="149dp"
            android:layout_height="47dp"
            android:ems="10"
            android:hint="City"
            android:inputType="textPersonName"
            android:textColor="#3D5AFE"
            android:textColorLink="#3D5AFE"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.672"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editform7"
            android:layout_width="360dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="Address"
            android:inputType="textPersonName"
            android:textColor="#3D5AFE"
            android:textColorLink="#3D5AFE"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.392"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.823"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="254dp"
            android:layout_height="48dp"
            android:background="#00E676"

            android:text="@string/addDetails"
            android:textColor="#F5F6F6"
            android:textSize="20sp"
            app:backgroundTint="#00B0FF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.947"
            app:strokeColor="#00E676" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemBackground="@color/cardview_light_background"

            app:menu="@menu/menu_navigation">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="76dp"
                android:layout_height="53dp"
                app:srcCompat="@mipmap/b" />

        </com.google.android.material.bottomnavigation.BottomNavigationView>

        <EditText
            android:id="@+id/editform3"
            android:layout_width="181dp"
            android:layout_height="52dp"
            android:ems="10"
            android:hint="Phone"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="#3D5AFE"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.891"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.413" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>

